--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build ProxyBridge (ARM64)
+name: Build ProxyBridge ARM64
 
 on:
   push:
@@ -15,50 +15,47 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup .NET
+    - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '9.0.x'
-        architecture: arm64
 
-    - name: Setup MSYS2 (for ARM64 GCC)
-      uses: msys2/setup-msys2@v2
-      with:
-        msystem: CLANGARM64  # 切换到ARM64专属环境
-        update: true
-        install: >-
-          mingw-w64-clang-aarch64-gcc-compat  # 正确的ARM64 GCC包名
-          mingw-w64-clang-aarch64-toolchain   # 正确的ARM64工具链包名
+    - name: Install Visual Studio Build Tools with ARM64 support
+      run: |
+        choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.ARM64 --quiet --norestart --nocache"
+      shell: powershell
 
-    - name: Add MSYS2 ARM64 tools to PATH
-      run: echo "C:\msys64\clangarm64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      shell: pwsh
+    - name: Build project using MSBuild targeting ARM64
+      run: |
+        $outputDir = "output\"
+        if (-Not (Test-Path $outputDir)) { New-Item -ItemType Directory -Path $outputDir | Out-Null }
+        msbuild ProxyBridge.csproj /p:Configuration=Release /p:Platform=ARM64 /p:OutDir=$outputDir
+      shell: powershell
 
-    - name: Install NSIS (with ARM64 support)
+    - name: Install NSIS
       run: |
         choco install nsis -y
-        choco install nsis-nsisarm -y
-      shell: pwsh
+      shell: powershell
 
-    - name: Download WinDivert (ARM64)
+    - name: Download WinDivert
       run: |
         $url = "https://github.com/basil00/Divert/releases/download/v2.2.2/WinDivert-2.2.2-A.zip"
         Invoke-WebRequest -Uri $url -OutFile "WinDivert.zip"
         Expand-Archive -Path "WinDivert.zip" -DestinationPath "C:\"
-        if (-not (Test-Path "C:\WinDivert-2.2.2-A\arm64")) {
-          Write-Error "WinDivert ARM64 binaries not found"
+      shell: powershell
+
+    - name: Verify WinDivert installation
+      run: |
+        if (Test-Path "C:\WinDivert-2.2.2-A") {
+          Write-Host "WinDivert installed successfully"
+          Get-ChildItem "C:\WinDivert-2.2.2-A" -Recurse | Select-Object FullName
+        } else {
+          Write-Error "WinDivert installation failed"
           exit 1
         }
-      shell: pwsh
+      shell: powershell
 
-    - name: Build project (ARM64)
-      run: |
-        $env:TARGET_ARCH = "arm64"
-        $env:WIN_DIVERT_PATH = "C:\WinDivert-2.2.2-A\arm64"
-        .\compile.ps1 -NoSign -Compiler aarch64-w64-mingw32-gcc -Architecture arm64
-      shell: pwsh
-
-    - name: Upload artifacts
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: ProxyBridge-ARM64-Build-${{ github.sha }}
@@ -67,9 +64,9 @@ jobs:
 
     - name: List output files
       run: |
-        Write-Host "`nARM64 Build artifacts:"
+        Write-Host "`nBuild artifacts:"
         Get-ChildItem output -Recurse | ForEach-Object {
           $size = [math]::Round($_.Length/1MB, 2)
           Write-Host "  $($_.Name) - $size MB"
         }
-      shell: pwsh
+      shell: powershell
