--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build ProxyBridge ARM64
+name: Build ProxyBridge
 
 on:
   push:
@@ -8,57 +8,66 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: windows-latest
+  build-arm64:
+    name: Build for Windows ARM64
+    runs-on: windows-latest-arm64
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup .NET SDK
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '9.0.x'
 
-    - name: Install Visual Studio Build Tools with ARM64 support
-      run: |
-        choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.ARM64 --quiet --norestart --nocache"
-      shell: powershell
+    - name: Setup MSYS2 (for Clang ARM64)
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: CLANGARM64
+        update: true
+        install: >-
+          git
+          make
+          mingw-w64-clang-aarch64-toolchain
 
-    - name: Build project using MSBuild targeting ARM64
-      run: |
-        $outputDir = "output\"
-        if (-Not (Test-Path $outputDir)) { New-Item -ItemType Directory -Path $outputDir | Out-Null }
-        msbuild ProxyBridge.csproj /p:Configuration=Release /p:Platform=ARM64 /p:OutDir=$outputDir
-      shell: powershell
+    - name: Add MSYS2 to PATH
+      run: echo "C:\msys64\clangarm64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      shell: pwsh
 
     - name: Install NSIS
-      run: |
-        choco install nsis -y
-      shell: powershell
+      run: choco install nsis -y
+      shell: pwsh
 
-    - name: Download WinDivert
+    - name: Build WinDivert from source for ARM64
       run: |
-        $url = "https://github.com/basil00/Divert/releases/download/v2.2.2/WinDivert-2.2.2-A.zip"
-        Invoke-WebRequest -Uri $url -OutFile "WinDivert.zip"
-        Expand-Archive -Path "WinDivert.zip" -DestinationPath "C:\"
-      shell: powershell
+        git clone https://github.com/basil00/Divert.git --branch v2.2.2
+        cd Divert/package/mingw
+        make
+        # Copy the built package to C:\ so the main build script can find it
+        Copy-Item -Path "..\..\build\WinDivert-*" -Destination "C:\" -Recurse
+      shell: pwsh
 
     - name: Verify WinDivert installation
       run: |
-        if (Test-Path "C:\WinDivert-2.2.2-A") {
-          Write-Host "WinDivert installed successfully"
-          Get-ChildItem "C:\WinDivert-2.2.2-A" -Recurse | Select-Object FullName
+        $divertPath = (Get-ChildItem "C:\WinDivert-*-A").FullName
+        if (Test-Path $divertPath) {
+          Write-Host "WinDivert built and installed successfully at $divertPath"
+          Get-ChildItem $divertPath -Recurse | Select-Object FullName
         } else {
           Write-Error "WinDivert installation failed"
           exit 1
         }
-      shell: powershell
+      shell: pwsh
 
-    - name: Upload build artifacts
+    - name: Build project for ARM64
+      run: .\compile.ps1 -NoSign -Arch arm64
+      shell: pwsh
+
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ProxyBridge-ARM64-Build-${{ github.sha }}
+        name: ProxyBridge-Build-arm64-${{ github.sha }}
         path: output/
         retention-days: 30
 
@@ -69,4 +78,4 @@ jobs:
           $size = [math]::Round($_.Length/1MB, 2)
           Write-Host "  $($_.Name) - $size MB"
         }
-      shell: powershell
+      shell: pwsh
